@@ -18,10 +18,8 @@ package org.apache.solr.handler.component;
 
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
-import java.util.HashSet;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
@@ -145,23 +143,27 @@ public class DebugComponent extends SearchComponent
 
 
   private void doDebugTrack(ResponseBuilder rb) {
-    SolrQueryRequest req = rb.req;
-    String rid = req.getParams().get(CommonParams.REQUEST_ID);
-    if(rid == null || "".equals(rid)) {
-      rid = generateRid(rb);
-      ModifiableSolrParams params = new ModifiableSolrParams(req.getParams());
-      params.add(CommonParams.REQUEST_ID, rid);//add rid to the request so that shards see it
-      req.setParams(params);
-    }
+    String rid = getRequestId(rb.req);
     rb.addDebug(rid, "track", CommonParams.REQUEST_ID);//to see it in the response
     rb.rsp.addToLog(CommonParams.REQUEST_ID, rid); //to see it in the logs of the landing core
     
   }
 
+  public static String getRequestId(SolrQueryRequest req) {
+    String rid = req.getParams().get(CommonParams.REQUEST_ID);
+    if(rid == null || "".equals(rid)) {
+      rid = generateRid(req);
+      ModifiableSolrParams params = new ModifiableSolrParams(req.getParams());
+      params.add(CommonParams.REQUEST_ID, rid);//add rid to the request so that shards see it
+      req.setParams(params);
+    }
+    return rid;
+  }
+
   @SuppressForbidden(reason = "Need currentTimeMillis, only used for naming")
-  private String generateRid(ResponseBuilder rb) {
-    String hostName = rb.req.getCore().getCoreContainer().getHostName();
-    return hostName + "-" + rb.req.getCore().getName() + "-" + System.currentTimeMillis() + "-" + ridCounter.getAndIncrement();
+  private static String generateRid(SolrQueryRequest req) {
+    String hostName = req.getCore().getCoreContainer().getHostName();
+    return hostName + "-" + req.getCore().getName() + "-" + System.currentTimeMillis() + "-" + ridCounter.getAndIncrement();
   }
 
   @Override
@@ -210,7 +212,7 @@ public class DebugComponent extends SearchComponent
     }
   }
 
-  private final static Set<String> EXCLUDE_SET = Collections.unmodifiableSet(new HashSet<>(Arrays.asList("explain")));
+  private final static Set<String> EXCLUDE_SET = Set.of("explain");
 
   @Override
   public void finishStage(ResponseBuilder rb) {
